# heartwood

./: .#flake.nix  .dockerignore  .env.seed  .envrc  .gitignore  .gitsigners  .pre-commit-config.yaml  1  AGENT.md  ARCHITECTURE.md  CHANGELOG.md  CI.md  CONTRIBUTING.md  Cargo.toml  HACKING.md  LICENSE-MIT  README.md  RELEASE.md  RUNNING_IN_CONTAINERS.md  VERSIONING.md  _rad  build.rs  deny.toml  docker-compose.yml  flake.nix  git-remote-rad.1.adoc  rad-id.1.adoc  rad-patch.1.adoc  rad.1.adoc  radicle-httpd.1.adoc  radicle-node.1.adoc  rust-toolchain.toml
crates/radicle/: Cargo.toml
crates/radicle-cli/: Cargo.toml
crates/radicle-cli-test/: Cargo.toml  README.md
crates/radicle-cli-test/src/: lib.rs
crates/radicle-cli/examples/: rad-auth-errors.md  rad-auth.md  rad-block.md  rad-checkout.md  rad-clean.md  rad-clone-connect.md  rad-clone-directory.md  rad-cob-migrate.md  rad-cob-multiset  rad-cob-multiset.md  rad-cob-show.md  rad-cob-update.md  rad-config.md  rad-fork.md  rad-id-threshold.md  rad-id-update-delete-field.md  rad-id.md  rad-inbox.md  rad-init-existing.md  rad-init-private-clone.md  rad-init-private.md  rad-init-sync.md  rad-issue.md  rad-merge-after-update.md  rad-merge-via-push.md  rad-node.md  rad-patch-ahead-behind.md  rad-patch-checkout-revision.md  rad-patch-diff.md  rad-patch-edit.md  rad-patch-fetch-1.md  rad-patch-merge-draft.md  rad-patch-update.md  rad-patch-via-push.md  rad-patch.md  rad-publish.md  rad-push-and-pull-patches.md  rad-remote.md  rad-review-by-hunk.md  rad-seed-many.md  (+3 more)
crates/radicle-cli/src/: git.rs  main.rs  pager.rs  terminal.rs
crates/radicle-schemars/: Cargo.toml
crates/radicle-schemars/src/: main.rs
crates/radicle-ssh/: Cargo.toml
crates/radicle-ssh/src/: encoding.rs  lib.rs
crates/radicle/src/: canonical.rs  cli.rs  collections.rs  io.rs  node.rs  rad.rs  schemars_ext.rs  serde_ext.rs  test.rs  web.rs
node/: Cargo.toml
node/src/: client.rs  collections.rs  control.rs  crypto.rs  decoder.rs  git.rs  hash.rs  identity.rs  lib.rs  main.rs  protocol.rs  rad.rs  service.rs  storage.rs  test.rs  transport.rs  wire.rs
node/src/client/: handle.rs  socket.rs
node/src/identity/: doc.rs
node/src/protocol/: config.rs  filter.rs  message.rs  peer.rs  wire.rs
node/src/service/: filter.rs  message.rs  (+2 more)
radicle/: Cargo.toml
radicle-agent/: Cargo.toml
radicle-agent/src/: lib.rs
radicle-bulin/: Cargo.toml
radicle-bulin/src/: main.rs
radicle-cli/: Cargo.toml
radicle-cli-test/: Cargo.toml
radicle-cli-test/src/: lib.rs
radicle-cli/completion/: _rad.zsh
radicle-cli/examples/: .#rad-id-multi-delegate.md  jj-init.md  rad-auth.md  rad-block.md  rad-checkout-repo-config-linux.md  rad-checkout-repo-config-macos.md  rad-checkout.md  rad-clean.md  rad-clone-all.md  rad-clone-connect.md  rad-clone-directory.md  rad-clone-partial-fail.md  rad-clone-unknown.md  rad-clone.md  rad-cob-log.md  rad-cob-migrate.md  rad-cob-multiset  rad-cob-multiset.md  rad-cob-operations.md  rad-cob-show.md  rad-cob-update-identity.md  rad-cob-update.md  rad-cob.md  rad-config-pin.md  rad-config.md  rad-cref.md  rad-delegate.md  rad-did-help.md  rad-did-init.md  rad-did-migrate.md  rad-did-revoke.md  rad-diff.md  rad-fetch.md  rad-fork.md  rad-id-clone-after-update.md  rad-id-collaboration.md  rad-id-conflict.md  rad-id-multi-delegate.md  rad-id-private.md  rad-id-rebase.md  (+68 more)
radicle-cli/src/: cli.rs  commands.rs  git.rs  id.rs  lib.rs  main.rs  node.rs  project.rs  terminal.rs  testing.rs  tui.rs  warning.rs
radicle-cli/tests/: commands.rs  environment.rs
radicle-cob/: Cargo.toml
radicle-cob/src/: backend.rs  change.rs  change_graph.rs  history.rs  identity.rs  lib.rs  object.rs  pruning_fold.rs  sign.rs  signatures.rs  test.rs  tests.rs  trailers.rs  type_name.rs
radicle-crdt/: Cargo.toml
radicle-crdt/src/: change.rs  clock.rs  gmap.rs  immutable.rs  lib.rs  lwwmap.rs  lwwreg.rs  lwwset.rs  ord.rs  redactable.rs  test.rs  thread.rs
radicle-crypto/: Cargo.toml
radicle-crypto/src/: cyphernet.rs  dh.rs  hash.rs  lib.rs  ssh.rs
radicle-dag/: Cargo.toml
radicle-dag/src/: lib.rs
radicle-fetch/: Cargo.toml
radicle-fetch/src/: git.rs  handle.rs  lib.rs  policy.rs  refs.rs  sigrefs.rs  stage.rs  state.rs  tracking.rs  transport.rs
radicle-httpd/: Cargo.toml  Dockerfile
radicle-httpd/src/: api.rs  axum_extra.rs  cache.rs  commands.rs  error.rs  git.rs  lib.rs  main.rs  raw.rs  test.rs  tracing_extra.rs
radicle-job/: Cargo.toml
radicle-job/src/: error.rs  lib.rs
radicle-node/: Cargo.toml  Dockerfile  radicle-node.service
radicle-node/src/: address.rs  address_book.rs  address_manager.rs  bounded.rs  client.rs  clock.rs  control.rs  decoder.rs  deserializer.rs  git.rs  lib.rs  logger.rs  main.rs  parser.rs  runtime.rs  service.rs  signals.rs  sql.rs  test.rs  tests.rs  transport.rs  wire.rs  worker.rs
radicle-remote-helper/: Cargo.toml
radicle-remote-helper/src/: .#push.rs  fetch.rs  git-remote-rad.rs  lib.rs  list.rs  push.rs
radicle-schemars/: Cargo.toml
radicle-schemars/src/: main.rs
radicle-signals/: Cargo.toml
radicle-signals/src/: lib.rs
radicle-ssh/: Cargo.toml
radicle-ssh/src/: agent.rs  encoding.rs  key.rs  lib.rs
radicle-systemd/: Cargo.toml
radicle-systemd/src/: lib.rs
radicle-term/: Cargo.toml
radicle-term/src/: ansi.rs  cell.rs  colors.rs  command.rs  editor.rs  element.rs  format.rs  hstack.rs  io.rs  label.rs  lib.rs  pager.rs  patch.rs  spinner.rs  table.rs  terminal.rs  textarea.rs  textbox.rs  vstack.rs
radicle-tools/: Cargo.toml
radicle-tools/src/: rad-agent.rs  rad-auth.rs  rad-cli-demo.rs  rad-clone.rs  rad-init.rs  rad-merge.rs  rad-push.rs  rad-self.rs  rad-set-canonical-refs.rs
radicle-tui/: Cargo.toml
radicle-tui/src/: app.rs  cob.rs  lib.rs  main.rs  subs.rs  ui.rs
radicle/src/: agent.rs  canonical.rs  cli.rs  cob.rs  collections.rs  crypto.rs  delegate.rs  did.rs  explorer.rs  git.rs  identity.rs  io.rs  keys.rs  keystore.rs  lib.rs  logger.rs  node.rs  profile.rs  rad.rs  schemars_ext.rs  serde_ext.rs  sql.rs  ssh.rs  storage.rs  test.rs  version.rs  web.rs
(+624 files in other folders)
