[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://radicle.xyz"
license = "MIT OR Apache-2.0"
repository = "https://app.radicle.xyz/seeds/seed.radicle.xyz/rad:z3gqcJUoA1n9HaHKufZs5FCSGazv5"
version = "0.9.0"

# Even though some crates in this workspace may build fine
# on a lower version, we set it here and inherit in all
# crates. This is to simplify maintenance. As of 2025-05-13
# we do not have the capacity to think about `rust-version`
# *per crate*. If anyone ever wants to set it to a different
# value per crate, this is of course possible. We're waiting
# for the day it makes a difference…
rust-version = "1.81.0"

[workspace.dependencies]
amplify = { version = "4.0.0", default-features = false }
anyhow = "1"
bstr = "1.3"
byteorder = "1.4"
chrono = { version = "0.4.26", default-features = false }
colored = "2.1.0"
crossbeam-channel = "0.5.6"
cyphernet = "0.5.2"
fastrand = { version = "2.0.0", default-features = false }
git2 = { version = "0.19.0", default-features = false }
lexopt = "0.3.0"
libc = "0.2.137"
localtime = "1.2.0"
log = "0.4.17"
multibase = "0.9.1"
nonempty = "0.9.0"
pretty_assertions = "1.3.0"
qcheck = { version = "1", default-features = false }
qcheck-macros = { version = "1", default-features = false }
radicle = { path = "crates/radicle" }
radicle-cli = { path = "crates/radicle-cli" }
radicle-cli-test = { path = "crates/radicle-cli-test" }
radicle-cob = { path = "crates/radicle-cob" }
radicle-crypto = { path = "crates/radicle-crypto" }
radicle-dag = { path = "crates/radicle-dag" }
radicle-fetch = { path = "crates/radicle-fetch" }
radicle-git-ext = { version = "0.8.0", default-features = false }
radicle-node = { path = "crates/radicle-node" }
radicle-signals = { path = "crates/radicle-signals" }
radicle-ssh = { path = "crates/radicle-ssh", default-features = false }
radicle-systemd = { path = "crates/radicle-systemd" }
radicle-term = { path = "crates/radicle-term" }
schemars = { version = "1.0.0-alpha.17" }
serde = "1.0"
serde_json = "1.0"
shlex = "1.1.0"
signature = "2.2"
snapbox = "0.4.3"
sqlite = "0.32.0"
ssh-key = { version = "0.6.3", default-features = false }
tempfile = "3.3.0"
thiserror = "1.0"
zeroize = "1.5.7"

[workspace.lints]
clippy.type_complexity = "allow"
clippy.enum_variant_names = "allow"

[profile.container]
inherits = "release"
debug = true
incremental = false
