[package]
name = "radicle-agent"
description = "Radicle Agents"
homepage = "https://radicle.xyz"
repository = "https://app.radicle.xyz/seeds/seed.radicle.xyz/rad:z3gqcJUoA1n9HaHKufZs5FCSGazv5"
license = "MIT OR Apache-2.0"
edition = "2021"
version = "0.1.0"

[dependencies]
signature = { version = "2.2" }

[dependencies.radicle-did]
path = "../radicle-did"
version = "0"

[dependencies.radicle-crypto]
path = "../radicle-crypto"
version = "0"
