[package]
name = "radicle-cli-test"
description = "Radicle CLI test library"
homepage = "https://radicle.xyz"
license = "MIT OR Apache-2.0"
version = "0.10.0"
authors = ["cloudhead <cloudhead@radicle.xyz>"]
edition = "2021"
categories = ["development-tools::testing"]
keywords = ["cli", "test", "command"]
readme = "README.md"
rust-version.workspace = true

[dependencies]
escargot = { version = "0.5.7" }
log = { version = "0.4", features = ["std"] }
pretty_assertions = { version = "1.3.0" }
shlex = { version = "1.1.0" }
snapbox = { version = "0.4.3" }
thiserror = { version = "1" }

[dependencies.radicle]
path = "../radicle"
version = "0"
features = ["logger", "test"]
