[package]
name = "radicle-cli-test"
description = "Radicle CLI test library"
homepage = "https://radicle.xyz"
license = "MIT OR Apache-2.0"
version = "0.11.0"
authors = ["cloudhead <cloudhead@radicle.xyz>"]
edition = "2021"
categories = ["development-tools::testing"]
keywords = ["cli", "test", "command"]
readme = "README.md"
rust-version.workspace = true

[dependencies]
escargot = "0.5.7"
log = { workspace = true, features = ["std"] }
pretty_assertions = { workspace = true }
radicle = { workspace = true, features = ["logger", "test"]}
shlex = { workspace = true }
snapbox = { workspace = true }
thiserror = { workspace = true }