[package]
name = "radicle-cli"
license = "MIT OR Apache-2.0"
version = "0.8.0"
authors = ["Alexis Sellier <alexis@radicle.xyz>"]
edition = "2021"
build = "../build.rs"

[[bin]]
name = "rad"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1" }
chrono = { version = "0.4.26", default-features = false, features = ["clock", "std"] }
git-ref-format = { version = "0.3.0", features = ["macro"] }
json-color = { version = "0.7" }
lexopt = { version = "0.2" }
localtime = { version = "1.2.0" }
log = { version = "0.4", features = ["std"] }
nonempty = { version = "0.8" }
# N.b. this is required to use macros, even though it's re-exported
# through radicle
radicle-git-ext = { version = "0.6.0", features = ["serde"] }
radicle-surf = { version = "0.17.0" }
serde = { version = "1.0" }
serde_json = { version = "1" }
serde_yaml = { version = "0.8" }
similar = { version = "2.2.1" }
thiserror = { version = "1" }
timeago = { version = "0.3", default-features = false }
tree-sitter = { version = "0.20.0" }
tree-sitter-highlight = { version = "0.20" }
tree-sitter-rust = { version = "0.20" }
tree-sitter-typescript = { version = "0.20" }
# N.b. This crate has a C++ token scanner that causes problems when building
# for the musl target. Hence it is optional for now.
tree-sitter-html = { version = "0.19", optional = true }
tree-sitter-css = { version = "0.19" }
tree-sitter-toml = { version = "0.20" }
tree-sitter-c = { version = "0.20" }
tree-sitter-python = { version = "0.20" }
# N.b. This crate has a C++ token scanner that causes problems when building
# for the musl target. Hence it is optional for now.
tree-sitter-ruby = { version = "0.20", optional = true }
tree-sitter-bash = { version = "0.20" }
tree-sitter-go = { version = "0.20.0" }
tree-sitter-md = { version = "0.1.5" }
ureq = { version = "2.6.1", default-features = false, features = ["json"] }
zeroize = { version = "1.1" }

[dependencies.radicle]
version = "0"
path = "../radicle"

[dependencies.radicle-cli-test]
version = "0"
path = "../radicle-cli-test"

[dependencies.radicle-cob]
version = "0"
path = "../radicle-cob"

[dependencies.radicle-crypto]
version = "0"
path = "../radicle-crypto"

[dependencies.radicle-term]
version = "0"
path = "../radicle-term"

[dev-dependencies]
pretty_assertions = { version = "1.3.0" }
radicle = { path = "../radicle", features = ["test"] }
radicle-node = { path = "../radicle-node", features = ["test"] }
tempfile = { version = "3.3.0" }
