[package]
name = "radicle-cob"
description = "Radicle Collaborative Objects library"
homepage = "https://radicle.xyz"
repository = "https://app.radicle.xyz/seeds/seed.radicle.xyz/rad:z3gqcJUoA1n9HaHKufZs5FCSGazv5"
version = "0.12.0"
authors = [
  "Alex Good <alex@memoryandthought.me>",
  "Fintan Halpenny <fintan.halpenny@gmail.com>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["radicle", "cob", "cobs"]

[features]
default = []
# Only used for testing. Ensures that commit ids are stable.
stable-commit-ids = []

[dependencies]
fastrand = { version = "2.0.0" }
log = { version = "0.4.17" }
nonempty = { version = "0.9.0", features = ["serialize"] }
once_cell = { version = "1.13" }
radicle-git-ext = { version = "0.8.0", features = ["serde"] }
serde_json = { version = "1.0" }
thiserror = { version = "1.0" }

[dependencies.git2]
version = "0.19.0"
default-features = false
features = ["vendored-libgit2"]

[dependencies.radicle-crypto]
path = "../radicle-crypto"
version = "0"
features = ["ssh"]

[dependencies.radicle-dag]
path = "../radicle-dag"
version = "0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
fastrand = { version = "2.0.0", default-features = false }
tempfile = { version = "3" }
qcheck = { version = "1", default-features = false }
qcheck-macros = { version = "1", default-features = false }

[dev-dependencies.radicle-crypto]
path = "../radicle-crypto"
version = "0"
features = ["test"]
