[package]
name = "radicle-cob"
description = "Radicle Collaborative Objects library"
homepage = "https://radicle.xyz"
repository = "https://app.radicle.xyz/seeds/seed.radicle.xyz/rad:z3gqcJUoA1n9HaHKufZs5FCSGazv5"
version = "0.14.0"
authors = [
  "Alex Good <alex@memoryandthought.me>",
  "Fintan Halpenny <fintan.halpenny@gmail.com>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["radicle", "cob", "cobs"]
rust-version.workspace = true

[features]
default = []
# Only used for testing. Ensures that commit ids are stable.
stable-commit-ids = []

[dependencies]
fastrand = { workspace = true }
git2 = { workspace = true, features = ["vendored-libgit2"] }
log = { workspace = true }
nonempty = { workspace = true, features = ["serialize"] }
radicle-crypto = { workspace = true, features = ["ssh"] }
radicle-dag = { workspace = true }
radicle-git-ext = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
signature = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
fastrand = { workspace = true }
qcheck = { workspace = true }
qcheck-macros = { workspace = true }
radicle-crypto = { workspace = true, features = ["test", "radicle-git-ext"] }
tempfile = { workspace = true }