[package]
name = "radicle-crdt"
version = "0.1.0"
edition = "2021"

[features]
test = ["fastrand", "qcheck"]

[dependencies]
fastrand = { version = "1.8.0", optional = true }
num-traits = { version = "0.2.15", default-features = false, features = ["std"] }
qcheck = { version = "1", optional = true }
serde = { version = "1" }
thiserror = { version = "1" }

[dependencies.radicle-crypto]
path = "../radicle-crypto"
version = "0"
features = []

[dev-dependencies]
fastrand = { version = "1.8.0" }
qcheck = { version = "1" }
qcheck-macros = { version = "1" }
radicle-crypto = { path = "../radicle-crypto", features = ["test"] }
tempfile = { version = "3" }
