[package]
name = "radicle-crdt"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version.workspace = true

[features]
test = ["fastrand", "qcheck"]

[dependencies]
fastrand = { workspace = true, optional = true }
num-traits = { version = "0.2.15", default-features = false, features = ["std"] }
qcheck = { workspace = true, optional = true }
radicle-crypto = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
fastrand = { workspace = true }
qcheck = { workspace = true }
qcheck-macros = { workspace = true }
radicle-crypto = { workspace = true, features = ["test"] }
tempfile = { workspace = true }
