[package]
name = "radicle-crypto"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = [
  "Alexis Sellier <alexis@radicle.xyz>",
  "Fintan Halpenny <fintan.halpenny@gmail.com>",
]
edition = "2021"

[features]
test = ["fastrand", "qcheck"]
ssh = ["radicle-ssh", "ssh-key"]

[dependencies]
amplify = { version = "4.0.0-beta.4" }
cyphernet = { version = "0.2.0", optional = true }
multibase = { version = "0.9.1" }
ec25519 = { version = "0.1.0", features = [] }
serde = { version = "1", features = ["derive"] }
sqlite = { version = "0.30.3", optional = true }
thiserror = { version = "1" }
zeroize = { version = "1.5.7" }

[dependencies.fastrand]
version = "1.8.0"
default-features = false
optional = true

[dependencies.radicle-git-ext]
version = "0.4"
optional = true

[dependencies.ssh-key]
version = "0.5.1"
default-features = false
features = ["std", "encryption", "getrandom"]
optional = true

[dependencies.qcheck]
version = "1"
default-features = false
optional = true

[dependencies.radicle-ssh]
path = "../radicle-ssh"
version = "0"
default-features = false
optional = true

[dev-dependencies]
fastrand = { version = "1.8.0", default-features = false }
qcheck-macros = { version = "1", default-features = false }
qcheck = { version = "1", default-features = false }
tempfile = { version = "3.3.0" }
