[package]
name = "radicle-crypto"
description = "Radicle cryptographic primitives"
homepage.workspace = true
repository.workspace = true
license.workspace = true
version = "0.12.0"
authors = [
  "cloudhead <cloudhead@radicle.xyz>",
  "Fintan Halpenny <fintan.halpenny@gmail.com>",
]
edition.workspace = true
rust-version.workspace = true

[features]
test = ["fastrand", "qcheck"]
ssh = ["radicle-ssh", "ssh-key"]

[dependencies]
amplify = { workspace = true }
cyphernet = { workspace = true, features = ["ed25519"], optional = true }
ec25519 = "0.1.0"
fastrand = { workspace = true, optional = true }
multibase = { workspace = true }
qcheck = { workspace = true, optional = true }
radicle-git-ext = { workspace = true, optional = true }
radicle-ssh = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
signature = { workspace = true }
sqlite = { workspace = true, features = ["bundled"], optional = true }
ssh-key = { workspace = true, features = ["std", "encryption", "getrandom"], optional = true }
thiserror = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
fastrand = { workspace = true }
qcheck = { workspace = true }
qcheck-macros = { workspace = true }
tempfile = { workspace = true }
