[package]
name = "radicle-fetch"
description = "Radicle fetch protocol"
homepage = "https://radicle.xyz"
license = "MIT OR Apache-2.0"
version = "0.10.0"
authors = ["Fintan Halpenny <fintan.halpenny@gmail.com>"]
edition = "2021"
rust-version.workspace = true

[dependencies]
bstr = { version = "1.3" }
either = { version = "1.9.0" }
gix-features = { version = "0.39.1", features = ["progress"] }
gix-hash = { version = "0.15.1" }
gix-odb = { version = "0.66.0" }
gix-pack = { version = "0.56.0" }
gix-protocol = { version = "0.47.0", features = ["blocking-client"] }
gix-transport = { version = "0.44.0", features = ["blocking-client"] }
log = { version = "0.4.17", features = ["std"] }
nonempty = { version = "0.9.0" }
radicle-git-ext = { version = "0.8.0", features = ["bstr"] }
thiserror = { version = "1" }

[dependencies.radicle]
path = "../radicle"
version = "0"
