[package]
name = "radicle-fetch"
description = "Radicle fetch protocol"
homepage = "https://radicle.xyz"
license = "MIT OR Apache-2.0"
version = "0.11.0"
authors = ["Fintan Halpenny <fintan.halpenny@gmail.com>"]
edition = "2021"
rust-version.workspace = true

[dependencies]
bstr = { workspace = true }
either = "1.9.0"
gix-features = { version = "0.39.1", features = ["progress"] }
gix-hash = "0.15.1"
gix-odb = "0.66.0"
gix-pack = "0.56.0"
gix-protocol = { version = "0.47.0", features = ["blocking-client"] }
gix-transport = { version = "0.44.0", features = ["blocking-client"] }
log = { workspace = true, features = ["std"] }
nonempty = { workspace = true }
radicle = { workspace = true }
radicle-git-ext = { workspace = true, features = ["bstr"] }
thiserror = { workspace = true }