[package]
name = "radicle-httpd"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Alexis Sellier <alexis@radicle.xyz>"]
edition = "2021"
default-run = "radicle-httpd"
build = "../build.rs"

[features]
default = []
logfmt = [
  "tracing-logfmt",
  "tracing-subscriber/env-filter"
]

[dependencies]
anyhow = { version = "1" }
axum = { version = "0.6.2", default-features = false, features = ["headers", "json", "query", "tokio"] }
axum-auth = { version= "0.4.0", default-features = false, features = ["auth-bearer"] }
axum-server = { version = "0.4.4", default-features = false }
chrono = { version = "0.4.22" }
fastrand = { version = "1.7.0" }
flate2 = { version = "1" }
hyper = { version = "0.14.17", default-features = false }
lexopt = { version = "0.2.1" }
radicle-surf = { version = "0.9.0", default-features = false, features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = { version = "1" }
time = { version = "0.3.17", features = ["parsing", "serde"] }
tokio = { version = "1.21", default-features = false, features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3.4", default-features = false, features = ["trace", "cors", "set-header"] }
tracing = { version = "0.1.37", default-features = false, features = ["std", "log"] }
tracing-logfmt = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "ansi", "fmt"] }

[dependencies.radicle]
path = "../radicle"
version = "0.2.0"

[dev-dependencies]
hyper = { version = "0.14.17", default-features = false, features = ["client"] }
radicle-cli = { path = "../radicle-cli" }
radicle-crypto = { path = "../radicle-crypto" }
tempfile = { version = "3.3.0" }
tower = { version = "0.4", features = ["util"] }
